--- a/Reaction Time/Base.lproj/Main.storyboard
+++ b/Reaction Time/Base.lproj/Main.storyboard
@@ -45,6 +45,12 @@
                     <view key="view" contentMode="scaleToFill" id="Jbi-qr-Ueu">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZXr-h1-SkG">
+                                <rect key="frame" x="345" y="497" width="78" height="30"/>
+                                <state key="normal" title="Start Game"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="iPad"/>
